--- a/public/assets/css/demo.css
+++ b/public/assets/css/demo.css
@@ -105,3 +105,23 @@
   text-align: center;
   margin-top: 1rem;
 }
+
+.dataTables_scrollHeadInner table.dataTable thead th, table.dataTable thead td {
+  padding: 15px 18px !important;
+  /* padding: 15px 0px !important; */
+  border-bottom: 1px solid #111;
+}
+
+
+.swal2-icon.swal2-success .swal2-success-ring {
+  position: absolute;
+  top: -4px;
+  left: -4px;
+  width: 80px;
+  height: 80px;
+  border: .25em solid rgb(253 255 251 / 30%);
+  border-radius: 50%;
+  z-index: 2;
+  -webkit-box-sizing: content-box;
+  box-sizing: content-box;
+}
