--- a/public/assets/css/theme.css
+++ b/public/assets/css/theme.css
@@ -144,7 +144,7 @@ table.dataTable thead .sorting, table.dataTable thead .sorting_asc, table.dataTa
     width: 100% !important;
 }
 .select2-container.select2-container--default.select2-container--open{
-    z-index: 1091 !important;
+    z-index: 1101 !important;
 }
 .filter-popup-block .search-filter:hover{
     color: var(--bs-theme-color) ;
@@ -515,4 +515,165 @@ animation: after 2s infinite;
 }
 .loader-show {
    overflow: hidden !important;
+}
+
+.menu_overlay{
+    position: fixed;
+    background: #f8fafb;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0%;
+    opacity: 0;
+    visibility: hidden;
+    transition: all ease-in-out 0.5s;
+    -webkit-transition: all ease-in-out 0.5s;
+    transform: translate(0%, 92%) matrix(1, 0, 0, 1, 0, 0);
+    overflow: hidden;
+    z-index: 1000;
+    display: block;
+}
+.menu_overlay.open {
+
+    opacity: 1;
+    visibility: visible;
+    height: calc(100vh - 64px);
+    transform: translate(0%, 0) matrix(1, 0, 0, 1, 0, 0);
+}
+#scrollable_content{
+    overflow-y: auto;
+    opacity: 1;
+    visibility: visible;
+    height: calc(100vh - 64px);
+    transform: translate(0%, 0) matrix(1, 0, 0, 1, 0, 0);
+}
+.menu_overlay .heading {
+    padding: 0;
+    border-bottom: 0;
+    background-size: cover !important;
+    
+    top: 70px;
+    width: auto !important;
+    right: 0;
+
+}
+.menu_overlay .heading h3{
+        width: 1570.84px;
+    color: #000 !important;
+    margin-top: 30px;
+    font-size: 24px;
+    font-family: 'gilroysemibold';
+    padding-left: 40px !important;
+}
+.menu_overlay .sitemap-blocks .sitemap-items .span3 {
+    box-shadow: inherit;
+    transition: 0.25s;
+        background: #FFFFFF;
+    box-shadow: 0px 5px 10px #434A540D;
+    border-radius: 10px;
+        margin-right: 1%;
+    margin-left: 0;
+}
+.menu_overlay .sitemap-blocks {
+    margin: 35px 40px 40px 40px;
+    width: auto;
+}
+.menu_overlay .box .title{
+    background: transparent;
+    border: 0;
+}
+.menu_overlay .sitemap-items .box .title {
+    display: block;
+    width: auto;
+}
+.box .title {
+    border-color: #dadfea;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+}
+.box .title {
+    background-color: #fbfbfb;
+    background-image: none;
+    border-color: #d6d6d6;
+    border-radius: 0;
+}
+.sitemap-items .box:hover {
+    transform: translateY(-0.3em);
+}
+.box .title {
+    height: auto;
+    background: url(../../../images/patterns/2.png) repeat;
+    position: relative;
+    border: 1px solid #c4c4c4;
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
+    moz-box-shadow: 0 1px 0px rgba(255, 255, 255, 1);
+    webkit-box-shadow: 0 1px 0px rgba(255, 255, 255, 1);
+    box-shadow: 0 1px 0px rgba(255, 255, 255, 1);
+}
+.sitemap-items .box .title h4 {
+    font-size: 15px !important;
+    font-family: "gilroymedium" !important;
+    font-weight: normal;
+}
+.sitemap-items .box .title h4 {
+    color: #262626;
+    font-family: 'gilroysemibold' !important;
+    padding-top: 15px;
+    padding-left: 30px;
+    border-bottom: 1px solid #b5b3b326;
+    margin-bottom: 10px;
+    padding-bottom: 9px;
+}
+.sitemap-items .box ul.sitemap{
+        margin-left: 13px;
+}
+.sitemap-items .box ul.sitemap li {
+    padding-left: 12px;
+    position: relative;
+    margin-bottom: 4px;;
+}
+.sitemap-items ul.sitemap li:marker {
+    font-size: 22px;
+    content: "•";
+    position: absolute;
+    left: 20px;
+    color: #7E7E7E;
+}
+.quick-menu-bar {
+    font-size: 28px;
+    color: #544444;
+    cursor: pointer;
+}
+.quick-menu-bar.active:before {
+    content: "\eb55" !important;
+}
+.quick-menu-bar.active{
+    transition: 0.5s;
+    transform: rotate(90deg);
+}
+.quick-menu-bar:hover{
+    color: var(--bs-theme-color) !important;
+}
+@media screen and (min-width: 1px) and (max-width: 550px) {
+    .home-page-boxes .sitemap-items .span3 {
+        width: 100% !important;
+        position: relative !important;
+        left: inherit !important;
+        top: inherit !important;
+    }
+    .sitemap-items .box ul.sitemap {
+         padding-bottom: 10px;
+    }
+    .quick-menu-bar.login-nav-block-mobile{
+        font-size: 25px;
+        margin-top: 6px;
+    }
+    .menu_overlay .sitemap-blocks {
+        margin: 14px 40px 40px 40px;
+        width: auto;
+    }
+}
+.select2 {
+    width: 100% !important;
 }
