--- a/public/css/common.css
+++ b/public/css/common.css
@@ -25,8 +25,9 @@ label.error{
   background-color: #17a2b8 !important; /* Blue */
 }
 
-input:read-only {
-  background-color: #f0f0f0 !important;
+input:checked {
+  border-color: #0d6efd !important;
+  background-color: #0D6EFC !important;
 
 }
 
